Bugfix: Remove 1px whitespace that is below the tabs.

--- a/sites/all/themes/genesis/genesis_mcneese/css/screen.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/screen.css
@@ -749,7 +749,7 @@ div#main-content div.local-tasks {
 
 div#main-content div.local-tasks ul.primary {
   border-bottom: none;
-  padding: 2px 0 3px 8px;
+  padding: 2px 0 2px 8px;
   text-transform: uppercase;
   font-size: 10px;
 }
